--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">About</a>
-            </li>
+              <li class="nav-item active">
+                  <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                {% if not userLoggedIn %}
+                  <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                {% else %}
+                  <a class="nav-link" href="#">Account</a>
+                {% endif %}
+              </li>
             </ul>
         </div>
     </nav>
