--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2>{% block title %} Sign Up {% endblock %}</h2>
-    <form action="#" method="post">
+    <form action="/new_user" method="post">
         <label for="email"><strong>Email:</strong></label>
         <input type="email" name="email" id="email" required="required" />
 
