--- a/templates/post.html
+++ b/templates/post.html
@@ -4,4 +4,5 @@
     <h2>{% block title %} {{ post['title'] }} {% endblock %}</h2>
     <span class="badge badge-primary">{{ post['isbn'] }}</span>
     <p>{{ post['publisher'] }}</p>
+    <button>Rent this book</button>
 {% endblock %}
