--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <a href="{{ url_for('post', post_id=post['bookID']) }}">
         <h2>{{ post['title'] }}</h2>
     </a>
-    <span class="badge badge-primary">{{ post['publisher'] }}</span>
+    <span class="badge badge-primary">{{ post['authors'] }}</span>
     <hr>
    {% endfor %}
 {% endblock %}
