Added comments for HTML files

--- a/templates/books_renting.html
+++ b/templates/books_renting.html
@@ -1,3 +1,7 @@
+<!-- 
+  This file builds the HTML that shows the logged-in user all the books they are currently renting.
+-->
+
 {% extends 'base.html' %}
 
 {% block content %}
