--- a/templates/post.html
+++ b/templates/post.html
@@ -1,3 +1,8 @@
+<!-- 
+  This file builds the HTML that shows details about one specific book and allows a logged-in
+  user to rent it.
+-->
+
 {% extends 'base.html' %}
 
 {% block content %}
