--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,3 +1,7 @@
+<!-- 
+  This file builds the HTML that allows a user to sign up for an account.
+-->
+
 {% extends 'base.html' %}
 
 {% block content %}
