--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,8 @@
+<!-- 
+  This file is used for all HTML pages used throughout the application and mostly serves to define
+  the navbar 
+-->
+
 <!doctype html>
 <html lang="en">
   <head>
