--- a/templates/loggedout.html
+++ b/templates/loggedout.html
@@ -1,3 +1,7 @@
+<!-- 
+  This file builds the HTML that confirms that a user has logged out.
+-->
+
 {% extends 'base.html' %}
 
 {% block content %}
